# SecureCloudStorage

./: README.md  quick-install-debian
charm/: .gitignore  quick-install-debian  setup.py
charm/charm/benchmark/: waters_benchmark.py
charm/charm/schemes/prenc/: pre_afgh06_jm.py
gst-pre-plugin/: .gitignore  deccryptor_pipeline.dot  encryptor_pipeline.dot  pipeline.dot  quick-install-debian  re-encryptor_pipeline.dot
gst-pre-plugin/gst-app/: .gitignore  encryptor_pipeline.dot
gst-pre-plugin/gst-app/src/: Makefile.am  decryptor  decryptor.c  encryptor  encryptor.c  play.c  re-encryptor  re-encryptor.c
gst-pre-plugin/gst-plugin/: .gitignore  configure.ac
gst-pre-plugin/gst-plugin/src/: Makefile.am  charm_embed_api.c  charm_embed_api.h  gstpre.c  gstpre.h
